--- a/deployments/monitoring/templates/namespace.yaml
+++ b/deployments/monitoring/templates/namespace.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: { { .Release.Namespace } }
-  labels: { { - include "monitoring.labels" . | nindent 4 } }
+  name: {{ .Release.Namespace | quote }}
+  labels:
+    {{- include "monitoring.labels" . | nindent 4 }}
