--- a/deployments/monitoring/templates/namespace.yaml
+++ b/deployments/monitoring/templates/namespace.yaml
@@ -2,4 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Release.Namespace | quote }}
-  labels: {{ - include "monitoring.labels" . | nindent 4 }}
+  labels:
+    {{- include "monitoring.labels" . | nindent 4 }}
