--- a/deployments/primary-application.yaml
+++ b/deployments/primary-application.yaml
@@ -1,25 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: apps
-  namespace: default
+  name: elliott-haus
+  namespace: argocd
 spec:
-  project: home
+  project: default
   source:
     repoURL: https://github.com/ethanelliott/ethanelliott.ca.git
-    targetRevision: main
+    targetRevision: HEAD
     path: deployments
-    directory:
-      recurse: true
-      exclude: 'primary-application.yaml'
-      include: '**/application.yaml'
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: elliott-haus
   syncPolicy:
-    automated: {}
-  ignoreDifferences:
-    - group: '*'
-      kind: Application
-      jsonPointers:
-        - /spec/syncPolicy/automated
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
