--- a/deployments/finances/templates/ingress.yaml
+++ b/deployments/finances/templates/ingress.yaml
@@ -1,33 +1,21 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   name: {{ include "finances.fullname" . }}
   labels:
     {{- include "finances.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
-  {{- if .Values.ingress.className }}
-  ingressClassName: {{ .Values.ingress.className }}
-  {{- end }}
-  {{- if and .Values.ingress.tls .Values.ingress.tls.enabled }}
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`{{ .Values.ingress.hostname }}`)
+      middlewares:
+        - name: {{ include "finances.fullname" . }}-cors
+      services:
+        - name: {{ include "finances.fullname" . }}
+          port: {{ .Values.service.port }}
   tls:
-    - hosts:
-        - {{ .Values.ingress.hostname }}
-      secretName: {{ .Values.ingress.tls.secretName }}
-  {{- end }}
-  rules:
-    - host: {{ .Values.ingress.hostname }}
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ include "finances.fullname" . }}
-                port:
-                  number: {{ .Values.service.port }}
+    certResolver: myresolver
 {{- end }}
