--- a/deployments/finances/values.yaml
+++ b/deployments/finances/values.yaml
@@ -11,18 +11,11 @@ service:
 
 ingress:
   enabled: true
-  className: 'nginx'
-  annotations:
-    kubernetes.io/ingress.class: 'nginx'
-    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://finances.elliott.haus'
-    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, POST, PUT, DELETE, OPTIONS'
-    nginx.ingress.kubernetes.io/cors-allow-headers: 'Content-Type, Authorization, X-Requested-With'
-    nginx.ingress.kubernetes.io/enable-cors: 'true'
-    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
   hostname: 'finances-service.elliott.haus'
-  tls:
+  cors:
     enabled: true
-    secretName: 'elliott-haus-wildcard-tls'
+    allowOrigins:
+      - https://finances.elliott.haus
 
 resources:
   limits:
