--- a/deployments/test-server/templates/ingress.yaml
+++ b/deployments/test-server/templates/ingress.yaml
@@ -1,27 +1,19 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   name: {{ include "test-server.fullname" . }}
   labels:
     {{- include "test-server.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
-  {{- if .Values.ingress.className }}
-  ingressClassName: {{ .Values.ingress.className }}
-  {{- end }}
-  rules:
-    - host: {{ .Values.ingress.hostname }}
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ include "test-server.fullname" . }}
-                port:
-                  number: {{ .Values.service.port }}
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`{{ .Values.ingress.hostname }}`)
+      services:
+        - name: {{ include "test-server.fullname" . }}
+          port: {{ .Values.service.port }}
+  tls:
+    certResolver: myresolver
 {{- end }}
